<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/settings_category_blufi_key"
        android:title="@string/settings_category_blufi_title">
        <EditTextPreference
            android:inputType="number"
            android:key="@string/settings_mtu_length_key"
            android:title="@string/settings_mtu_length_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_version_title">
        <Preference
            android:key="@string/settings_version_key"
            android:title="@string/settings_version_title" />
        <Preference
            android:key="@string/settings_support_protocol_key"
            android:title="@string/settings_support_protocol_title" />
    </PreferenceCategory>
</PreferenceScreen>